--- a/EE/index.html
+++ b/EE/index.html
@@ -131,7 +131,10 @@
             Hash, User, PenTool, CheckSquare, MoreHorizontal, Mail, Share2
         } from 'https://esm.sh/lucide-react@0.294.0';
 
-        // --- CONSTANTS ---
+        // ==========================================
+        // SECTION 1: CONSTANTS & UTILS
+        // ==========================================
+        
         const CABLE_TYPES = ["PVC", "SWA", "Singles", "FP200", "NYM-J"];
         const CIRCUIT_TYPES = [
             { id: 'socket', label: 'Socket Outlets (Radial)' },
@@ -161,7 +164,9 @@
             return (230 / (r * 5)).toFixed(2); 
         };
 
-        // --- COMPONENTS ---
+        // ==========================================
+        // SECTION 2: SHARED UI COMPONENTS
+        // ==========================================
 
         const Header = ({ view, onBack, title }) => (
             <header className="bg-gray-800 border-b border-gray-700 p-4 sticky top-0 z-50 shadow-lg no-print">
@@ -231,6 +236,10 @@
                 )}
             </div>
         );
+
+        // ==========================================
+        // SECTION 3: DASHBOARD VIEWS
+        // ==========================================
 
         const Dashboard = ({ installation, circuits, stats, setView, createNewCircuit, handleReset }) => (
             <div className="pb-24 bg-gray-900 min-h-screen font-sans text-gray-100 no-print">
@@ -311,6 +320,10 @@
                 </div>
             );
         };
+
+        // ==========================================
+        // SECTION 4: EDITORS (DETAILS & CIRCUITS)
+        // ==========================================
 
         const DetailsEditor = ({ installation, setInstallation, setView }) => {
             const update = (field, val) => setInstallation(prev => ({...prev, [field]: val}));
@@ -573,16 +586,36 @@
             );
         };
 
+        // ==========================================
+        // SECTION 5: REPORT & PDF VIEW
+        // ==========================================
+
         const ReportView = ({ installation, circuits, setView }) => {
             const today = installation.testDate || new Date().toISOString().split('T')[0];
             const maxRows = 16;
             const emptyRows = Math.max(0, maxRows - circuits.length);
 
-            const handleEmail = () => {
-                alert("Reminder: Please manually attach the PDF you just downloaded to the email.");
-                const subject = encodeURIComponent(`Test Record - ${installation.address || 'New Installation'}`);
-                const body = encodeURIComponent(`Please find attached the Electrical Test Record for:\n\nClient: ${installation.clientName}\nAddress: ${installation.address}\n\nNote: I have attached the saved PDF file to this email.`);
-                window.location.href = `mailto:?subject=${subject}&body=${body}`;
+            const handleShare = async () => {
+                // Reminder regarding the attachment
+                alert("Reminder: Please manually attach the saved PDF to the app you select next.");
+                
+                const shareData = {
+                    title: 'Electrical Test Record',
+                    text: `Electrical Test Record Details:\n\nClient: ${installation.clientName}\nAddress: ${installation.address}\n\n(See attached PDF report)`,
+                };
+
+                if (navigator.share) {
+                    try {
+                        await navigator.share(shareData);
+                    } catch (err) {
+                        console.error('Share failed:', err);
+                    }
+                } else {
+                    // Fallback to mailto if Web Share API is not supported
+                    const subject = encodeURIComponent(shareData.title);
+                    const body = encodeURIComponent(shareData.text);
+                    window.location.href = `mailto:?subject=${subject}&body=${body}`;
+                }
             };
 
             const CheckBox = ({ checked }) => (
@@ -602,8 +635,8 @@
                             <button onClick={() => window.print()} className="flex-1 md:flex-none bg-yellow-400 text-gray-900 px-6 py-3 rounded-xl font-bold flex items-center justify-center gap-2 hover:bg-yellow-300 shadow-lg transition-transform active:scale-95">
                                 <Save size={18} /> 1. Save PDF
                             </button>
-                            <button onClick={handleEmail} className="flex-1 md:flex-none bg-blue-600 text-white px-6 py-3 rounded-xl font-bold flex items-center justify-center gap-2 hover:bg-blue-500 shadow-lg transition-transform active:scale-95">
-                                <Mail size={18} /> 2. Open Email
+                            <button onClick={handleShare} className="flex-1 md:flex-none bg-blue-600 text-white px-6 py-3 rounded-xl font-bold flex items-center justify-center gap-2 hover:bg-blue-500 shadow-lg transition-transform active:scale-95">
+                                <Share2 size={18} /> 2. Share Record
                             </button>
                         </div>
                     </div>
@@ -909,7 +942,10 @@
             );
         };
 
-        // --- MAIN APP ---
+        // ==========================================
+        // SECTION 6: MAIN APP & STATE MANAGEMENT
+        // ==========================================
+
         function App() {
             const [view, setView] = useState('dashboard');
             const [activeCircuitId, setActiveCircuitId] = useState(null);
