--- a/ActiveIron/Kids/index.html
+++ b/ActiveIron/Kids/index.html
@@ -27,6 +27,7 @@
 
         body {
             font-family: 'Nunito', sans-serif;
+            overscroll-behavior: none; /* Helps prevent bounce on mobile */
         }
         
         h1, h2, h3, .kid-font {
@@ -111,7 +112,7 @@
                 <circle cx="20" cy="25" r="7" fill="#D2691E" />
                 <circle cx="80" cy="25" r="7" fill="#D2691E" />
 
-                {/* Feet (New!) */}
+                {/* Feet */}
                 <ellipse cx="30" cy="125" rx="14" ry="10" fill="#8B4513" />
                 <ellipse cx="70" cy="125" rx="14" ry="10" fill="#8B4513" />
                 <circle cx="30" cy="125" r="5" fill="#D2691E" opacity="0.6" />
@@ -120,7 +121,7 @@
                 {/* Body (Fuller) */}
                 <path d="M20 80 C 10 80 10 120 30 130 L 70 130 C 90 120 90 80 80 80 Z" fill={isPoweredUp ? "#5C2D91" : "#F58220"} />
                 
-                {/* Paws (New!) */}
+                {/* Paws */}
                 <circle cx="15" cy="85" r="12" fill="#8B4513" />
                 <circle cx="85" cy="85" r="12" fill="#8B4513" />
 
@@ -346,9 +347,10 @@
                         {/* Game Area */}
                         <div 
                             ref={containerRef}
-                            className="relative w-full h-full bg-gradient-to-b from-blue-100 to-white overflow-hidden"
+                            className="relative w-full h-full bg-gradient-to-b from-blue-100 to-white overflow-hidden select-none"
                             onMouseMove={(e) => handleInput(e.clientX)}
                             onTouchMove={(e) => handleInput(e.touches[0].clientX)}
+                            style={{ touchAction: 'none' }}
                         >
                             {/* Background Elements */}
                             <div className="absolute top-10 left-10 opacity-40"><Cloud size={80} color="white" /></div>
