--- a/ASMS/Timesheet/index.html
+++ b/ASMS/Timesheet/index.html
@@ -544,7 +544,7 @@
                          </label>
                         <input 
                             className={`w-full glass-input rounded-lg px-3 py-2.5 text-sm transition-all placeholder-slate-600 ${isInvalid('site') ? 'border-red-500/50 bg-red-900/10' : ''}`}
-                            placeholder="e.g. CUH"
+                            placeholder="e.g. St. Stephen's Hospital"
                             value={job.site}
                             onChange={(e) => onChange(job.id, 'site', e.target.value)}
                         />
